fix: photo resizing

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="C:\Users\User\OneDrive\Рабочий стол\foto\my.png">
+    <img src="C:\Users\User\OneDrive\Рабочий стол\foto\my.png" width="500" height="377">
 </body>
 </html>
