--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="C:\Users\User\OneDrive\Рабочий стол\foto\my.png" width="500" height="377">
+    <p><a> href= "https://hikikomori13.github.io/rsschool-cv/cv">my resume cv</a></p>
 </body>
 </html>
