--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a> href="https://hikikomori13.github.io/rsschool-cv/cv">my resume cv</a>
+    <a href="https://hikikomori13.github.io/rsschool-cv/cv">my resume cv</a>
 </body>
 </html>
